Propagate forced direction switches to the utility process

Views mojo apps (eg. Keyboard Shortcut Viewer) will use these switches.

Bug: 856341
Test: cros KSV (Ctrl-Alt-/) respects --force-[ui|text]-direction=rtl
Change-Id: I7f0a2577c6c8dab362125f385305521cd624705f
Reviewed-on: https://chromium-review.googlesource.com/1116003
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570871}